--- a/.github/workflows/manual-build.yml
+++ b/.github/workflows/manual-build.yml
@@ -1,11 +1,21 @@
-name: Build and Test Docker Images
+name: Manual Build & Test
 
 on:
   workflow_dispatch:
     inputs:
-      agent:
-        description: 'Which agent to build (or all)'
+      action:
+        description: 'What to do'
         required: true
+        default: 'test'
+        type: choice
+        options:
+        - test
+        - build
+        - build-and-push
+        - full-pipeline
+      agent:
+        description: 'Which agent (for build actions)'
+        required: false
         default: 'all'
         type: choice
         options:
@@ -13,36 +23,14 @@ on:
         - crewai-agent
         - langraph-agent
         - adk-agent
-      push_to_registry:
-        description: 'Push to GitHub Container Registry'
-        required: true
-        default: false
-        type: boolean
-  push:
-    branches: [ main ]
-    paths:
-      - 'agents/**'
-      - 'docker-compose.yml'
-      - '.github/workflows/build-images.yml'
 
 env:
   REGISTRY: ghcr.io
 
 jobs:
-  build-and-test:
-    name: Build ${{ matrix.agent }}
+  manual-action:
+    name: ${{ github.event.inputs.action }}
     runs-on: ubuntu-latest
-    
-    strategy:
-      fail-fast: false
-      matrix:
-        agent:
-          - name: crewai-agent
-            port: 8080
-          - name: langraph-agent  
-            port: 8082
-          - name: adk-agent
-            port: 8083
     
     permissions:
       contents: read
@@ -52,146 +40,98 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       
+    - name: Set up Python
+      if: contains(github.event.inputs.action, 'test') || github.event.inputs.action == 'full-pipeline'
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+        
+    - name: Install dependencies
+      if: contains(github.event.inputs.action, 'test') || github.event.inputs.action == 'full-pipeline'
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest pytest-asyncio httpx black isort
+        
+    - name: Run linting
+      if: contains(github.event.inputs.action, 'test') || github.event.inputs.action == 'full-pipeline'
+      run: |
+        flake8 agents/ --max-line-length=127 --extend-ignore=E203,W503 || true
+        black --check agents/ || true
+        isort --check-only agents/ || true
+        
     - name: Set up Docker Buildx
+      if: contains(github.event.inputs.action, 'build') || github.event.inputs.action == 'full-pipeline'
       uses: docker/setup-buildx-action@v3
       
     - name: Log in to Container Registry
-      if: github.event.inputs.push_to_registry == 'true' || github.event_name == 'push'
+      if: github.event.inputs.action == 'build-and-push' || github.event.inputs.action == 'full-pipeline'
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         
-    - name: Extract metadata
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.REGISTRY }}/${{ github.repository }}/${{ matrix.agent.name }}
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=sha
-          type=raw,value=latest,enable={{is_default_branch}}
+    - name: Build specific agent
+      if: github.event.inputs.agent != 'all' && (contains(github.event.inputs.action, 'build') || github.event.inputs.action == 'full-pipeline')
+      run: |
+        agent=${{ github.event.inputs.agent }}
+        echo "Building $agent..."
+        
+        # Extract metadata
+        tag="${{ env.REGISTRY }}/${{ github.repository }}/$agent:manual-$(date +%Y%m%d-%H%M%S)"
+        
+        docker build -t $agent:test ./agents/$agent/
+        
+        if [[ "${{ github.event.inputs.action }}" == "build-and-push" || "${{ github.event.inputs.action }}" == "full-pipeline" ]]; then
+          docker tag $agent:test $tag
+          docker push $tag
+          echo "Pushed: $tag"
+        fi
+        
+    - name: Build all agents
+      if: github.event.inputs.agent == 'all' && (contains(github.event.inputs.action, 'build') || github.event.inputs.action == 'full-pipeline')
+      run: |
+        timestamp=$(date +%Y%m%d-%H%M%S)
+        
+        for agent in crewai-agent langraph-agent adk-agent; do
+          echo "Building $agent..."
+          docker build -t $agent:test ./agents/$agent/
           
-    - name: Build and push image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./agents/${{ matrix.agent.name }}
-        platforms: linux/amd64
-        push: ${{ github.event.inputs.push_to_registry == 'true' || github.event_name == 'push' }}
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-        
-    - name: Test image locally
-      run: |
-        # Build for local testing
-        docker build -t ${{ matrix.agent.name }}:test ./agents/${{ matrix.agent.name }}/
-        
-        # Test that Python imports work
-        docker run --rm ${{ matrix.agent.name }}:test python -c "
-        import sys
-        print(f'Python version: {sys.version}')
-        
-        # Test basic imports
-        try:
-            import fastapi
-            import pydantic
-            import uvicorn
-            print('✓ Basic dependencies OK')
-        except ImportError as e:
-            print(f'✗ Import error: {e}')
-            sys.exit(1)
-        "
-        
-    - name: Test image startup
-      run: |
-        # Create test env file
-        echo "GOOGLE_API_KEY=test-key" > test.env
-        echo "GEMINI_MODEL=gemini-2.0-flash-exp" >> test.env
-        
-        # Start container
-        docker run -d --name test-${{ matrix.agent.name }} \
-          --env-file test.env \
-          -p ${{ matrix.agent.port }}:${{ matrix.agent.port }} \
-          ${{ matrix.agent.name }}:test
-        
-        # Wait for startup
-        sleep 15
-        
-        # Test health endpoint
-        max_attempts=10
-        for i in $(seq 1 $max_attempts); do
-          if curl -f http://localhost:${{ matrix.agent.port }}/health; then
-            echo "✓ ${{ matrix.agent.name }} health check passed"
-            break
-          else
-            if [ $i -eq $max_attempts ]; then
-              echo "✗ ${{ matrix.agent.name }} health check failed"
-              docker logs test-${{ matrix.agent.name }}
-              exit 1
-            fi
-            echo "Attempt $i/$max_attempts failed, retrying..."
-            sleep 3
+          if [[ "${{ github.event.inputs.action }}" == "build-and-push" || "${{ github.event.inputs.action }}" == "full-pipeline" ]]; then
+            tag="${{ env.REGISTRY }}/${{ github.repository }}/$agent:manual-$timestamp"
+            docker tag $agent:test $tag
+            docker push $tag
+            echo "Pushed: $tag"
           fi
         done
         
-        # Test other endpoints
-        curl -f http://localhost:${{ matrix.agent.port }}/spec || echo "Spec endpoint failed"
-        curl -f http://localhost:${{ matrix.agent.port }}/capabilities || echo "Capabilities endpoint failed"
-        
-        # Cleanup
-        docker stop test-${{ matrix.agent.name }}
-        docker rm test-${{ matrix.agent.name }}
-
-  integration-test:
-    name: Integration Test
-    runs-on: ubuntu-latest
-    needs: build-and-test
-    
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-        
-    - name: Install test dependencies
+    - name: Run integration tests
+      if: contains(github.event.inputs.action, 'test') || github.event.inputs.action == 'full-pipeline'
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest pytest-asyncio httpx
-        
-    - name: Create test environment
-      run: |
+        # Create test environment
         for agent in crewai-agent langraph-agent adk-agent; do
-          echo "GOOGLE_API_KEY=test-key-for-integration" > agents/$agent/.env
+          echo "GOOGLE_API_KEY=test-key-manual" > agents/$agent/.env
           echo "GEMINI_MODEL=gemini-2.0-flash-exp" >> agents/$agent/.env
         done
         
-    - name: Start all services
-      run: |
+        # Start services
         docker-compose up -d --build
+        sleep 30
         
-    - name: Wait for services
-      run: |
+        # Wait for services
         chmod +x scripts/wait-for-services.sh
         ./scripts/wait-for-services.sh
         
-    - name: Run integration tests
-      run: |
-        python -m pytest tests/test_ci_integration.py -v --tb=short
+        # Run tests
+        python -m pytest tests/test_ci_integration.py -v
         
-    - name: Show logs on failure
-      if: failure()
-      run: |
-        echo "=== DOCKER COMPOSE LOGS ==="
-        docker-compose logs
-        
-    - name: Cleanup
-      if: always()
-      run: |
+        # Cleanup
         docker-compose down -v
+        
+    - name: Summary
+      run: |
+        echo "Action completed: ${{ github.event.inputs.action }}"
+        echo "Agent: ${{ github.event.inputs.agent }}"
+        if [[ "${{ github.event.inputs.action }}" == "build-and-push" || "${{ github.event.inputs.action }}" == "full-pipeline" ]]; then
+          echo "Images pushed to: ${{ env.REGISTRY }}/${{ github.repository }}"
+        fi
