--- a/.github/workflows/multi-agent-pipeline.yml
+++ b/.github/workflows/multi-agent-pipeline.yml
@@ -74,50 +74,99 @@ jobs:
       run: |
         echo "Validating agents configuration..."
         
-        # Make validator executable
-        chmod +x scripts/validate-config.py
+        # Simple YAML validation with Python
+        python3 << 'EOF'
+        import yaml
+        import os
+        import sys
         
-        # Run validation in JSON mode and check output
-        if python scripts/validate-config.py --json > validation_result.json; then
-          echo "JSON validation completed"
-        else
-          echo "JSON validation failed"
-          exit 1
-        fi
+        config_path = '.github/configs/agents.yaml'
         
-        # Check if JSON file was created and has content
-        if [ ! -s validation_result.json ]; then
-          echo "JSON output file is empty, running validation in text mode..."
-          python scripts/validate-config.py
-          echo "Validation completed but JSON output failed"
-          exit 1
-        fi
-        
-        # Display results in text mode for readability
-        echo "Displaying validation results:"
-        python scripts/validate-config.py
-        
-        # Check if validation passed using Python instead of jq
-        VALID=$(python3 -c "
-        import json
         try:
-            with open('validation_result.json') as f:
-                result = json.load(f)
-            print(result.get('valid', False))
+            # Check if file exists
+            if not os.path.exists(config_path):
+                print(f"ERROR: Configuration file not found: {config_path}")
+                sys.exit(1)
+            
+            # Load and validate YAML
+            with open(config_path, 'r') as f:
+                config = yaml.safe_load(f)
+            
+            # Validate required sections
+            required_sections = ['agents', 'global', 'environments', 'labels']
+            for section in required_sections:
+                if section not in config:
+                    print(f"ERROR: Missing required section: {section}")
+                    sys.exit(1)
+            
+            # Validate agents
+            if not isinstance(config['agents'], list) or len(config['agents']) == 0:
+                print("ERROR: 'agents' must be a non-empty list")
+                sys.exit(1)
+            
+            # Validate each agent
+            agent_names = set()
+            agent_ports = set()
+            
+            for i, agent in enumerate(config['agents']):
+                prefix = f"Agent {i+1}"
+                
+                # Check required fields
+                required_fields = ['name', 'service', 'port', 'description', 'resources']
+                for field in required_fields:
+                    if field not in agent:
+                        print(f"ERROR: {prefix}: Missing required field '{field}'")
+                        sys.exit(1)
+                
+                # Check for duplicates
+                if agent['name'] in agent_names:
+                    print(f"ERROR: {prefix}: Duplicate agent name '{agent['name']}'")
+                    sys.exit(1)
+                agent_names.add(agent['name'])
+                
+                if agent['port'] in agent_ports:
+                    print(f"ERROR: {prefix}: Duplicate port '{agent['port']}'")
+                    sys.exit(1)
+                agent_ports.add(agent['port'])
+                
+                # Check prod environment exists
+                if 'prod' not in agent['resources']:
+                    print(f"ERROR: {prefix}: Missing 'prod' environment in resources")
+                    sys.exit(1)
+                
+                # Validate prod resources
+                prod_resources = agent['resources']['prod']
+                required_resource_fields = ['cpu', 'memory', 'min_instances', 'max_instances', 'concurrency']
+                for field in required_resource_fields:
+                    if field not in prod_resources:
+                        print(f"ERROR: {prefix}: Missing resource field '{field}' for prod environment")
+                        sys.exit(1)
+                
+                # Check agent directory exists
+                agent_dir = f"agents/{agent['name']}"
+                if not os.path.exists(agent_dir):
+                    print(f"ERROR: {prefix}: Agent directory not found: {agent_dir}")
+                    sys.exit(1)
+                
+                # Check Dockerfile exists
+                dockerfile_path = f"{agent_dir}/Dockerfile"
+                if not os.path.exists(dockerfile_path):
+                    print(f"ERROR: {prefix}: Dockerfile not found: {dockerfile_path}")
+                    sys.exit(1)
+            
+            print("Configuration validation PASSED!")
+            print(f"Found {len(config['agents'])} valid agents:")
+            for agent in config['agents']:
+                resources = agent['resources']['prod']
+                print(f"  - {agent['name']} ({agent['service']}) - {resources['cpu']}/{resources['memory']} (min_instances: {resources['min_instances']})")
+            
+        except yaml.YAMLError as e:
+            print(f"ERROR: YAML parsing error: {e}")
+            sys.exit(1)
         except Exception as e:
-            print(f'Error reading JSON: {e}')
-            print(False)
-        ")
-        
-        echo "Validation result: $VALID"
-        
-        if [ "$VALID" != "True" ]; then
-          echo "Configuration validation FAILED!"
-          echo "Please fix the errors above before proceeding."
-          exit 1
-        fi
-        
-        echo "Configuration validation PASSED!"
+            print(f"ERROR: Validation failed: {e}")
+            sys.exit(1)
+        EOF
         
     - name: Load agent configuration
       id: config
