--- a/agents/adk-agent/Dockerfile
+++ b/agents/adk-agent/Dockerfile
@@ -15,7 +15,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Expose port
-# EXPOSE 8083
+EXPOSE 8083
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
