--- a/agents/langraph-agent/Dockerfile
+++ b/agents/langraph-agent/Dockerfile
@@ -15,11 +15,11 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Expose port
-EXPOSE 8082
+# EXPOSE 8082
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8082/health || exit 1
+# HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+#     CMD curl -f http://localhost:8082/health || exit 1
 
 # Run the application
-CMD ["python", "main.py"]
+CMD ["python", "main.py", "--host", "0.0.0.0", "--port", "8082"]
