--- a/.github/configs/agents.yaml
+++ b/.github/configs/agents.yaml
@@ -33,11 +33,11 @@ agents:
     description: "ADK data processing and analysis agent"
     resources:
       prod:
-        cpu: "1"            # Trochę więcej dla przetwarzania danych
-        memory: "1Gi"         # Więcej RAM dla DataFrames
+        cpu: "1"            
+        memory: "1Gi"         
         min_instances: 0
-        max_instances: 1unoduetr      # Może potrzebować więcej przy większych danych
-        concurrency: 80      # Mniej concurrent requests dla data processing
+        max_instances: 1      
+        concurrency: 80      
 
 # Globalne ustawienia - zoptymalizowane pod koszty
 global:
